--- a/practica1/memoria/input/aparcamiento.tex
+++ b/practica1/memoria/input/aparcamiento.tex
@@ -1,1 +1,7 @@
-\chapter{Aparcamiento}
+\chapter{Simulador de aparcamiento}
+\section{Multiples ejecuciones}
+\subsection{Tablas}
+\subsection{Gráficas}
+\subsection{Análisis}
+\section{Variación de un parámetro}
+\section{Variación de varios parámetros}
