--- a/practica1/memoria/demo.tex
+++ b/practica1/memoria/demo.tex
@@ -2,18 +2,19 @@
 
 % Language and input encoding
 
-\usepackage[english]{babel}
+\usepackage[spanish]{babel}
 \selectlanguage{spanish}
 
 % Document settings
 
-\usepackage[type=CC, modifier=by-nc-sa, version=4.0]{doclicense}
+%\usepackage[type=CC, modifier=by-nc-sa, version=4.0]{doclicense}
 \usepackage{graphicx}
 	\graphicspath{{img/}}
 \usepackage{multirow}
 
 \author{Alejandro Manzanares Lemus}
 \title{Práctica 1}
+\date{}
 
 % Document composition
 
@@ -21,11 +22,14 @@
 
 \AqMaketitle[cover    = cover,
              org      = Simulación de Sistemas,
-             subtitle = ,
              url      = alexmnzlms@correo.ugr.es]
+\AqSetChapter{Apartado}
+\AqSetSection{}
 \tableofcontents
 
 % Document files
 \input{input/aparcamiento.tex}
+\input{input/radares.tex}
+\input{input/peces.tex}
 
 \end{document}
