--- a/practica1/memoria/input/aparcamiento.tex
+++ b/practica1/memoria/input/aparcamiento.tex
@@ -1,7 +1,50 @@
 \chapter{Simulador de aparcamiento}
 \section{Multiples ejecuciones}
 \subsection{Tablas}
+
 \subsection{Gráficas}
+
+
+\begin{figure}[h]
+\includegraphics[width=16cm]{min_ejecuciones_aparcamiento.png}
+\includegraphics[width=16cm]{min_c_ejecuciones_aparcamiento.png}
+\centering
+\end{figure}
+
+
 \subsection{Análisis}
+
 \section{Variación de un parámetro}
+\subsection{Gráficas}
+
+\begin{figure}[h]
+\includegraphics[width=14cm]{vision_aparcamiento.png}
+\includegraphics[width=14cm]{simulaciones_aparcamiento.png}
+\includegraphics[width=14cm]{probabilidad_aparcamiento.png}
+\centering
+\end{figure}
+
+
+\begin{figure}[h]
+\includegraphics[width=16cm]{min_vision_aparcamiento.png}
+\includegraphics[width=16cm]{min_c_vision_aparcamiento.png}
+\centering
+\end{figure}
+\begin{figure}[h]
+\includegraphics[width=16cm]{min_simulaciones_aparcamiento.png}
+\includegraphics[width=16cm]{min_c_simulaciones_aparcamiento.png}
+\centering
+\end{figure}
+\begin{figure}[h]
+\includegraphics[width=16cm]{min_probabilidad_aparcamiento.png}
+\includegraphics[width=16cm]{min_c_probabilidad_aparcamiento.png}
+\centering
+\end{figure}
+
 \section{Variación de varios parámetros}
+\subsection{Gráficas}
+\begin{figure}[h]
+\includegraphics[width=16cm]{aparcamiento_pob_vision_distancia.png}
+\includegraphics[width=16cm]{aparcamiento_pob_vision_distancia_linea.png}
+\centering
+\end{figure}
