--- a/practica1/memoria/demo.tex
+++ b/practica1/memoria/demo.tex
@@ -11,6 +11,7 @@
 \usepackage{graphicx}
 	\graphicspath{{img/}}
 \usepackage{multirow}
+\usepackage{longtable}
 
 \author{Alejandro Manzanares Lemus}
 \title{Práctica 1}
