--- a/practica1/memoria/input/aparcamiento.tex
+++ b/practica1/memoria/input/aparcamiento.tex
@@ -190,6 +190,53 @@
 \end{figure}
 
 \section{Variación de varios parámetros}
+\section{Tablas}
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+% \usepackage{graphicx}
+\begin{table}[h]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{ccccccccccc}
+\multicolumn{1}{l}{} & \multicolumn{1}{l}{} & \multicolumn{9}{c}{Probabilidad de aparcamiento} \\ \cline{3-11}
+\multicolumn{1}{l}{} & \multicolumn{1}{l|}{} & \multicolumn{1}{c|}{\textbf{0.1}} & \multicolumn{1}{c|}{\textbf{0.2}} & \multicolumn{1}{c|}{\textbf{0.3}} & \multicolumn{1}{c|}{\textbf{0.4}} & \multicolumn{1}{c|}{\textbf{0.5}} & \multicolumn{1}{c|}{\textbf{0.6}} & \multicolumn{1}{c|}{\textbf{0.7}} & \multicolumn{1}{c|}{\textbf{0.8}} & \multicolumn{1}{c|}{\textbf{0.9}} \\ \cline{2-11}
+\multicolumn{1}{c|}{\multirow{10}{*}{Vision del conductor}} & \multicolumn{1}{c|}{\textbf{1}} & \multicolumn{1}{c|}{0.099620} & \multicolumn{1}{c|}{0.210710} & \multicolumn{1}{c|}{0.338900} & \multicolumn{1}{c|}{0.506900} & \multicolumn{1}{c|}{0.748600} & \multicolumn{1}{c|}{1.151790} & \multicolumn{1}{c|}{1.839180} & \multicolumn{1}{c|}{3.030380} & \multicolumn{1}{c|}{6.517660} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{2}} & \multicolumn{1}{c|}{0.100520} & \multicolumn{1}{c|}{0.209580} & \multicolumn{1}{c|}{0.338920} & \multicolumn{1}{c|}{0.506960} & \multicolumn{1}{c|}{0.746740} & \multicolumn{1}{c|}{1.064400} & \multicolumn{1}{c|}{1.649300} & \multicolumn{1}{c|}{2.953630} & \multicolumn{1}{c|}{6.460450} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{3}} & \multicolumn{1}{c|}{0.100390} & \multicolumn{1}{c|}{0.208980} & \multicolumn{1}{c|}{0.331670} & \multicolumn{1}{c|}{0.477110} & \multicolumn{1}{c|}{0.687310} & \multicolumn{1}{c|}{1.006920} & \multicolumn{1}{c|}{1.602300} & \multicolumn{1}{c|}{2.782350} & \multicolumn{1}{c|}{6.437300} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{4}} & \multicolumn{1}{c|}{0.099130} & \multicolumn{1}{c|}{0.207590} & \multicolumn{1}{c|}{0.333320} & \multicolumn{1}{c|}{0.480670} & \multicolumn{1}{c|}{0.689810} & \multicolumn{1}{c|}{0.982970} & \multicolumn{1}{c|}{1.512140} & \multicolumn{1}{c|}{2.697540} & \multicolumn{1}{c|}{6.371280} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{5}} & \multicolumn{1}{c|}{0.099830} & \multicolumn{1}{c|}{0.208420} & \multicolumn{1}{c|}{0.330430} & \multicolumn{1}{c|}{0.475570} & \multicolumn{1}{c|}{0.670110} & \multicolumn{1}{c|}{0.966900} & \multicolumn{1}{c|}{1.480660} & \multicolumn{1}{c|}{2.565040} & \multicolumn{1}{c|}{6.277510} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{6}} & \multicolumn{1}{c|}{0.100240} & \multicolumn{1}{c|}{0.206780} & \multicolumn{1}{c|}{0.328190} & \multicolumn{1}{c|}{0.476200} & \multicolumn{1}{c|}{0.672600} & \multicolumn{1}{c|}{0.954690} & \multicolumn{1}{c|}{1.437860} & \multicolumn{1}{c|}{2.513240} & \multicolumn{1}{c|}{6.085530} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{7}} & \multicolumn{1}{c|}{0.099610} & \multicolumn{1}{c|}{0.207000} & \multicolumn{1}{c|}{0.326700} & \multicolumn{1}{c|}{0.475310} & \multicolumn{1}{c|}{0.664360} & \multicolumn{1}{c|}{0.945820} & \multicolumn{1}{c|}{1.427430} & \multicolumn{1}{c|}{2.441490} & \multicolumn{1}{c|}{6.001120} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{8}} & \multicolumn{1}{c|}{0.099350} & \multicolumn{1}{c|}{0.206130} & \multicolumn{1}{c|}{0.325790} & \multicolumn{1}{c|}{0.475920} & \multicolumn{1}{c|}{0.668380} & \multicolumn{1}{c|}{0.942190} & \multicolumn{1}{c|}{1.396800} & \multicolumn{1}{c|}{2.416840} & \multicolumn{1}{c|}{5.853020} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{9}} & \multicolumn{1}{c|}{0.098970} & \multicolumn{1}{c|}{0.206130} & \multicolumn{1}{c|}{0.328060} & \multicolumn{1}{c|}{0.471570} & \multicolumn{1}{c|}{0.664220} & \multicolumn{1}{c|}{0.942370} & \multicolumn{1}{c|}{1.400510} & \multicolumn{1}{c|}{2.345610} & \multicolumn{1}{c|}{5.729080} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{10}} & \multicolumn{1}{c|}{0.099440} & \multicolumn{1}{c|}{0.204730} & \multicolumn{1}{c|}{0.327840} & \multicolumn{1}{c|}{0.473750} & \multicolumn{1}{c|}{0.666350} & \multicolumn{1}{c|}{0.933790} & \multicolumn{1}{c|}{1.395460} & \multicolumn{1}{c|}{2.351450} & \multicolumn{1}{c|}{5.656510} \\ \cline{2-11}
+\end{tabular}%
+}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+% \usepackage{graphicx}
+\begin{table}[]
+\centering
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{ccrrrrrrrrr}
+\multicolumn{1}{l}{} & \multicolumn{1}{l}{} & \multicolumn{9}{c}{Probabilidad de aparcamiento} \\ \cline{3-11}
+\multicolumn{1}{l}{} & \multicolumn{1}{l|}{} & \multicolumn{1}{c|}{\textbf{0.1}} & \multicolumn{1}{c|}{\textbf{0.2}} & \multicolumn{1}{c|}{\textbf{0.3}} & \multicolumn{1}{c|}{\textbf{0.4}} & \multicolumn{1}{c|}{\textbf{0.5}} & \multicolumn{1}{c|}{\textbf{0.6}} & \multicolumn{1}{c|}{\textbf{0.7}} & \multicolumn{1}{c|}{\textbf{0.8}} & \multicolumn{1}{c|}{\textbf{0.9}} \\ \cline{2-11}
+\multicolumn{1}{c|}{\multirow{10}{*}{Vision del conductor}} & \multicolumn{1}{c|}{\textbf{1}} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{95} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{2}} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{95} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{3}} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{95} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{4}} & \multicolumn{1}{r|}{100} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{94} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{5}} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{95} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{6}} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{95} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{7}} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{99} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{96} & \multicolumn{1}{r|}{95} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{8}} & \multicolumn{1}{r|}{95} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{98} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{96} & \multicolumn{1}{r|}{96} & \multicolumn{1}{r|}{95} & \multicolumn{1}{r|}{94} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{9}} & \multicolumn{1}{r|}{94} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{95} & \multicolumn{1}{r|}{96} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{96} & \multicolumn{1}{r|}{95} & \multicolumn{1}{r|}{95} & \multicolumn{1}{r|}{93} \\ \cline{2-11}
+\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbf{10}} & \multicolumn{1}{r|}{94} & \multicolumn{1}{r|}{94} & \multicolumn{1}{r|}{97} & \multicolumn{1}{r|}{94} & \multicolumn{1}{r|}{96} & \multicolumn{1}{r|}{95} & \multicolumn{1}{r|}{95} & \multicolumn{1}{r|}{94} & \multicolumn{1}{r|}{93} \\ \cline{2-11}
+\end{tabular}%
+}
+\end{table}
+
 \subsection{Gráficas}
 \begin{figure}[h]
 \includegraphics[width=16cm]{aparcamiento_pob_vision_distancia.png}
