--- a/practica1/memoria/input/aparcamiento.tex
+++ b/practica1/memoria/input/aparcamiento.tex
@@ -1,6 +1,7 @@
 \chapter{Simulador de aparcamiento}
+El simulador de aparcamiento consiste en un sistema que simula un conductor que debe aparcar su coche en una calle infinitamente larga lo mas cerca posible de una posición objetivo. Para todas las pruebas realizadas se ha considerado 100 como posición objetivo en la que se desea aparcar. Para simular este sistemas, podemos establecer la probabilidad de que el conductor encuentre la plaza ocupada, asi como la distancia de visión que posee y el numero de simulaciones que se realizan.
 \section{Multiples ejecuciones}
-
+En la primera prueba, ejecutamos el simulador un total de 10 veces, para comprobar los resultados obtenidos. Podemos ver en la siguiente tabla la distancia minima a la posición objetivo (ru---recordemos que esta posición es la número 100--- asi como la posición a partir de la cual empezo a buscar aparcamiento. Para cada iteración del simulador se han realizado 100000 simulaciones.
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[h]
@@ -23,15 +24,25 @@
 }
 \end{table}
 
+Tambien podemos ver estos resultados en forma de gráfica a continuación.
+
+Como se puede apreciar, los resultados no varian demasiado entre una simulación y otra, ya que no estamos alterando ninguna variable del sistema, simplemente estamos ejecutando la misma simulación de forma reiterada.
+
+\newpage
+
 \begin{figure}[h]
 \includegraphics[width=16cm]{min_ejecuciones_aparcamiento.png}
 \includegraphics[width=16cm]{min_c_ejecuciones_aparcamiento.png}
 \centering
 \end{figure}
 
+\newpage
 
 
 \section{Variación de un parámetro}
+Esta prueba si que tiene algo más de interés, a continuación realizaremos una serie de ejecuciones del simulador variando un solo parametro cada vez. Por defecto, los parametros son 100000 simulaciones, 0.9 probabilidad de ocupación de la plaza y 2 unidades de visión para el conductor.
+
+Primeramente realizamos la prueba variando el parámetro de la probabilidad de que el conductor encuentre ocupadala plaza en la que intentara aparcar. En la siguiente tabla podemos ver la distancia minima encontrada para los diferentes valores de esta probabilidad asi como la posción inicial a patir de la cual se obtiene esta distancia.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -40,7 +51,8 @@
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|}
 \hline
-\textbf{Probabilidad de aparcamiento} & \textbf{Distancia minima al objetivo} & \textbf{Posicion inicial (c)} \\ \hline
+\textbf{Probabilidad de ocupación} & \textbf{Distancia minima al objetivo} & \textbf{Posicion inicial (c)} \\ \hline
+
 0.1 & 0.101910 & 100 \\
 0.2 & 0.210680 & 100 \\
 0.3 & 0.338430 & 100 \\
@@ -53,6 +65,27 @@
 \end{tabular}%
 }
 \end{table}
+
+Para una probabilidad inferior al 50\%, podemos observar como la mejor distancia se obtiene empezando a busca aparcamiento justo cuando alcanzamos la posición objetivo, mientras que cuando la probabilidad aumenta, debemos ser mas precavidos y empezar a buscar plaza antes de llegar a nuestro objetivo.
+
+En la gráfica siguiente se puede observar como para los distintos valores de probabilidad, cuando antes se empieza a buscar aparcamiento, más lejos se aparca del objetivo, mientras que cuanto mas esperamos a empezar a buscar, mejor resultado se obtiene, excepto cuando la probabilidad pasa el 50\%. En este caso, podemos ver como al curva es ascendente en su ultimo tramo, lo que significa que el resultado empeora si esperamos demasiado.
+
+\begin{figure}[h]
+\includegraphics[width=16cm]{probabilidad_aparcamiento.png}
+\centering
+\end{figure}
+
+\newpage
+En las siguientes gráficas, podemos ver de manera visual, como según aumenta la probabilidad de encontrar la plaza ocupada, aumenta la distancia minima encontrada y disminuya la posición inicial a partir de la cual empezar a buscar aparcamiento.
+\begin{figure}[h]
+\includegraphics[width=16cm]{min_probabilidad_aparcamiento.png}
+\includegraphics[width=16cm]{min_c_probabilidad_aparcamiento.png}
+\centering
+\end{figure}
+
+\newpage
+
+El siguiente parámetro que variamos, es la distancia de visión del conductor. En la siguiente tabla podemos ver los resultados obtenidos para esta prueba.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -76,6 +109,28 @@
 }
 \end{table}
 
+Podemos ver en este caso, que segun aumenta la distancia de visión del conductor, disminuye la distancia a la que conseguimos aparcar de la posición objetivo, pero tambien disminuye la posición inicial a partir de la cual debemos empezar a buscar, es decir, debemos empezar a buscar aparcamiento con más antelación.
+
+En la siguiente gráfica, se muestra la relación entre distancia minima al objetivo y la posición inicial a patir de la cual se empieza a buscar aparcamiento.
+
+Se puede notar como para los diferentes valores de la visión del conductor, los resultados son bastante homogeneos, siendo que las gráficas casi parecen una sola.
+
+\begin{figure}[h]
+\includegraphics[width=16cm]{vision_aparcamiento.png}
+\centering
+\end{figure}
+
+\newpage
+
+A continuación se puede notar graficamente como al aumentar la visión del conductor, la distancia minima al objetivo se reduce, mientras que la posición inicial al aumenta en un principio pero disminuye finalmente.
+\begin{figure}[h]
+\includegraphics[width=16cm]{min_vision_aparcamiento.png}
+\includegraphics[width=16cm]{min_c_vision_aparcamiento.png}
+\centering
+\end{figure}
+
+\newpage
+
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[h]
@@ -94,28 +149,19 @@
 \end{table}
 
 \begin{figure}[h]
-\includegraphics[width=14cm]{vision_aparcamiento.png}
-\includegraphics[width=14cm]{simulaciones_aparcamiento.png}
-\includegraphics[width=14cm]{probabilidad_aparcamiento.png}
+\includegraphics[width=16cm]{simulaciones_aparcamiento.png}
 \centering
 \end{figure}
 
+\newpage
 
-\begin{figure}[h]
-\includegraphics[width=16cm]{min_vision_aparcamiento.png}
-\includegraphics[width=16cm]{min_c_vision_aparcamiento.png}
-\centering
-\end{figure}
 \begin{figure}[h]
 \includegraphics[width=16cm]{min_simulaciones_aparcamiento.png}
 \includegraphics[width=16cm]{min_c_simulaciones_aparcamiento.png}
 \centering
 \end{figure}
-\begin{figure}[h]
-\includegraphics[width=16cm]{min_probabilidad_aparcamiento.png}
-\includegraphics[width=16cm]{min_c_probabilidad_aparcamiento.png}
-\centering
-\end{figure}
+
+\newpage
 
 \section{Variación de varios parámetros}
 % Please add the following required packages to your document preamble:
