--- a/practica1/memoria/input/radares.tex
+++ b/practica1/memoria/input/radares.tex
@@ -1,5 +1,10 @@
 \chapter{Simulador de radares}
+
+El simulador de radares simula el funcionamiento de un numero determinado de radares, que poseen una vida util determinada --- por defecto 20 dias --- y un tiempo de reparación determiando hasta que vuelven a estar operativos --- de 15 a 30 dias por defecto ---. Intentaremos averiguar el numero de repuestos necesarios para que el tiempo de desprotección parcial sea inferior al 1\%
+
 \section{Variación del numero de ejecuciones}
+En primer lugar, probaremos a ejecutar el simulador bajo su configuración por defecto, variando el número de simulaciones que se realizan. A continación mostramos los resultados obtenidos:
+
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
@@ -40,6 +45,8 @@
 }
 \end{table}
 
+Con una simulación podemos observar que el número de repuestos necesarios para que el tiempo de desprotección parcial no supere el 1\% es 10.
+
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[h]
@@ -49,19 +56,19 @@
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 5 simulaciones}} \\ \hline
 \textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
-0 & 5 & 42 & 352.239 & 965.038 & 360.555 & 911.129 & 2.4957 \\
-1 & 5 & 50 & 335.562 & 919.348 & 644.205 & 132.647 & 363.428 \\
-2 & 5 & 53.8 & 287.18 & 786.795 & 465.832 & 253.226 & 693.761 \\
-3 & 5 & 53.2 & 238.988 & 654.762 & 554.075 & 327.864 & 898.265 \\
-4 & 5 & 50 & 197.389 & 540.793 & 10.3199 & 472.767 & 12.9525 \\
-5 & 5 & 33.2 & 117.506 & 321.935 & 622.093 & 165.225 & 452.668 \\
-6 & 5 & 28.6 & 785.825 & 215.294 & 694.982 & 260.007 & 712.348 \\
-7 & 5 & 20.4 & 57.108 & 15.646 & 554.977 & 164.936 & 4.5188 \\
-8 & 5 & 17.8 & 441.643 & 12.0998 & 584.808 & 12.0867 & 331.144 \\
-9 & 5 & 7.4 & 149.035 & 408.316 & 391.152 & 864.149 & 236.753 \\
-10 & 5 & 4.6 & 10.6241 & 291.071 & 450.555 & 950.589 & 260.435 \\
-11 & 5 & 2 & 451.752 & 123.768 & 212.132 & 476.625 & 130.582 \\
-12 & 5 & 1.2 & 348.875 & 955.823 & 178.885 & 5.9696 & 163.551 \\
+0 & 5 & 42 & 352.239 & 96.5038 & 3.60555 & 9.11129 & 2.4957 \\
+1 & 5 & 50 & 335.562 & 91.9348 & 6.44205 & 13.2647 & 3.63428 \\
+2 & 5 & 53.8 & 287.18 & 78.6795 & 4.65832 & 25.3226 & 6.93761 \\
+3 & 5 & 53.2 & 238.988 & 65.4762 & 5.54075 & 32.7864 & 8.98265 \\
+4 & 5 & 50 & 197.389 & 54.0793 & 10.3199 & 47.2767 & 12.9525 \\
+5 & 5 & 33.2 & 117.506 & 32.1935 & 6.22093 & 16.5225 & 4.52668 \\
+6 & 5 & 28.6 & 78.5825 & 21.5294 & 6.94982 & 26.0007 & 7.12348 \\
+7 & 5 & 20.4 & 57.108 & 15.646 & 5.54977 & 16.4936 & 4.5188 \\
+8 & 5 & 17.8 & 44.1643 & 12.0998 & 5.84808 & 12.0867 & 3.31144 \\
+9 & 5 & 7.4 & 14.9035 & 4.08316 & 3.91152 & 8.64149 & 2.36753 \\
+10 & 5 & 4.6 & 10.6241 & 2.91071 & 4.50555 & 9.50589 & 2.60435 \\
+11 & 5 & 2 & 4.51752 & 1.23768 & 2.12132 & 4.76625 & 1.30582 \\
+12 & 5 & 1.2 & 3.48875 & 0.955823 & 1.78885 & 5.9696 & 1.63551 \\
 13 & 5 & 0 & 0 & 0 & 0 & 0 & 0 \\
 14 & 5 & 0 & 0 & 0 & 0 & 0 & 0 \\
 15 & 5 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -79,6 +86,10 @@
 }
 \end{table}
 
+\newpage
+
+Para 5 simulaciones, podemos apreciar como el numero minimo de repuestos necesarios aumenta a 12.
+
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[h]
@@ -88,21 +99,21 @@
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 10 simulaciones}} \\ \hline
 \textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
-0 & 10 & 44.7 & 349.833 & 958.447 & 286.937 & 11.2503 & 308.207 \\
-1 & 10 & 51.1 & 327.844 & 898.203 & 366.516 & 12.1404 & 332.656 \\
-2 & 10 & 57.9 & 300.196 & 822.454 & 401.246 & 213.681 & 5.8542 \\
-3 & 10 & 54.3 & 246.846 & 676.289 & 512.184 & 248.807 & 681.661 \\
-4 & 10 & 54.9 & 209.583 & 574.199 & 11.5031 & 317.491 & 869.833 \\
-5 & 10 & 38.7 & 132.112 & 36.195 & 6.7173 & 302.853 & 829.734 \\
-6 & 10 & 32.1 & 92.83 & 254.329 & 11.7232 & 307.326 & 841.989 \\
-7 & 10 & 21.5 & 508.223 & 139.239 & 10.2659 & 278.845 & 7.6396 \\
-8 & 10 & 16.6 & 402.062 & 11.0154 & 864.356 & 199.703 & 547.132 \\
-9 & 10 & 8 & 172.256 & 471.935 & 374.166 & 10.8646 & 297.659 \\
-10 & 10 & 5.3 & 13.462 & 368.821 & 3.653 & 11.2033 & 306.939 \\
-11 & 10 & 3.5 & 781.515 & 214.114 & 271.825 & 738.965 & 202.456 \\
-12 & 10 & 1 & 241.587 & 661.883 & 124.722 & 310.247 & 849.992 \\
-13 & 10 & 0.4 & 572.334 & 156.804 & 699.206 & 1.071 & 293.425 \\
-14 & 10 & 0.2 & 414.171 & 113.471 & 632.456 & 130.972 & 358.828 \\
+0 & 10 & 44.7 & 349.833 & 95.8447 & 2.86937 & 11.2503 & 3.08207 \\
+1 & 10 & 51.1 & 327.844 & 89.8203 & 3.66516 & 12.1404 & 3.32656 \\
+2 & 10 & 57.9 & 300.196 & 82.2454 & 4.01246 & 21.3681 & 5.8542 \\
+3 & 10 & 54.3 & 246.846 & 67.6289 & 5.12184 & 24.8807 & 6.81661 \\
+4 & 10 & 54.9 & 209.583 & 57.4199 & 11.5031 & 31.7491 & 8.69833 \\
+5 & 10 & 38.7 & 132.112 & 36.195 & 6.7173 & 30.2853 & 8.29734 \\
+6 & 10 & 32.1 & 92.83 & 25.4329 & 11.7232 & 30.7326 & 8.41989 \\
+7 & 10 & 21.5 & 50.8223 & 13.9239 & 10.2659 & 27.8845 & 7.6396 \\
+8 & 10 & 16.6 & 40.2062 & 11.0154 & 8.64356 & 19.9703 & 5.47132 \\
+9 & 10 & 8 & 17.2256 & 4.71935 & 3.74166 & 10.8646 & 2.97659 \\
+10 & 10 & 5.3 & 13.462 & 3.68821 & 3.653 & 11.2033 & 3.06939 \\
+11 & 10 & 3.5 & 7.81515 & 2.14114 & 2.71825 & 7.38965 & 2.02456 \\
+12 & 10 & 1 & 2.41587 & 0.661883 & 1.24722 & 3.10247 & 0.849992 \\
+13 & 10 & 0.4 & 0.572334 & 0.156804 & 0.699206 & 1.071 & 0.293425 \\
+14 & 10 & 0.2 & 0.414171 & 0.113471 & 0.632456 & 1.30972 & 0.358828 \\
 15 & 10 & 0 & 0 & 0 & 0 & 0 & 0 \\
 16 & 10 & 0 & 0 & 0 & 0 & 0 & 0 \\
 17 & 10 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -118,6 +129,8 @@
 }
 \end{table}
 
+Para 10 simulaciones, vemos que el numero minimo de repuestos es 12.
+
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[h]
@@ -127,21 +140,21 @@
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 50 simulaciones}} \\ \hline
 \textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
-0 & 50 & 43.96 & 353.582 & 968.718 & 319.413 & 718.843 & 197.028 \\
-1 & 50 & 50.1 & 327.789 & 898.053 & 394.994 & 158.941 & 4.3548 \\
-2 & 50 & 53.82 & 287.653 & 78.809 & 575.588 & 231.274 & 633.634 \\
-3 & 50 & 53.52 & 241.971 & 662.935 & 716.067 & 262.554 & 719.317 \\
-4 & 50 & 48.8 & 185.36 & 507.835 & 10.3214 & 342.243 & 937.641 \\
-5 & 50 & 40.66 & 136.93 & 375.151 & 10.1088 & 33.439 & 916.132 \\
-6 & 50 & 32.08 & 92.246 & 252.729 & 957.854 & 303.834 & 832.423 \\
-7 & 50 & 20.84 & 555.177 & 152.103 & 936.202 & 24.514 & 671.617 \\
-8 & 50 & 13.56 & 32.382 & 887.178 & 774.639 & 188.165 & 5.1552 \\
-9 & 50 & 7.9 & 172.093 & 471.488 & 4.9208 & 11.604 & 317.918 \\
-10 & 50 & 4.46 & 8.5308 & 233.721 & 4.3669 & 889.152 & 243.603 \\
-11 & 50 & 1.94 & 331.555 & 90.837 & 311.291 & 586.852 & 160.781 \\
-12 & 50 & 0.7 & 137.498 & 376.707 & 140.335 & 283.413 & 776.473 \\
-13 & 50 & 0.32 & 411.364 & 112.703 & 890.769 & 155.438 & 425.857 \\
-14 & 50 & 0.04 & 598.782 & 16.405 & 282.843 & 423.403 & 116.001 \\
+0 & 50 & 43.96 & 353.582 & 96.8718 & 3.19413 & 7.18843 & 1.97028 \\
+1 & 50 & 50.1 & 327.789 & 89.8053 & 3.94994 & 15.8941 & 4.3548 \\
+2 & 50 & 53.82 & 287.653 & 78.809 & 5.75588 & 23.1274 & 6.33634 \\
+3 & 50 & 53.52 & 241.971 & 66.2935 & 7.16067 & 26.2554 & 7.19317 \\
+4 & 50 & 48.8 & 185.36 & 50.7835 & 10.3214 & 34.2243 & 9.37641 \\
+5 & 50 & 40.66 & 136.93 & 37.5151 & 10.1088 & 33.439 & 9.16132 \\
+6 & 50 & 32.08 & 92.246 & 25.2729 & 9.57854 & 30.3834 & 8.32423 \\
+7 & 50 & 20.84 & 55.5177 & 15.2103 & 9.36202 & 24.514 & 6.71617 \\
+8 & 50 & 13.56 & 32.382 & 8.87178 & 7.74639 & 18.8165 & 5.1552 \\
+9 & 50 & 7.9 & 17.2093 & 4.71488 & 4.9208 & 11.604 & 3.17918 \\
+10 & 50 & 4.46 & 8.5308 & 2.33721 & 4.3669 & 8.89152 & 2.43603 \\
+11 & 50 & 1.94 & 3.31555 & 0.90837 & 3.11291 & 5.86852 & 1.60781 \\
+12 & 50 & 0.7 & 1.37498 & 0.376707 & 1.40335 & 2.83413 & 0.776473 \\
+13 & 50 & 0.32 & 0.411364 & 0.112703 & 0.890769 & 1.55438 & 0.425857 \\
+14 & 50 & 0.04 & 0.0598782 & 0.016405 & 0.282843 & 0.423403 & 0.116001 \\
 15 & 50 & 0 & 0 & 0 & 0 & 0 & 0 \\
 16 & 50 & 0 & 0 & 0 & 0 & 0 & 0 \\
 17 & 50 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -157,6 +170,10 @@
 }
 \end{table}
 
+\newpage
+
+Para 50 simulaciones el numero minimo vuelve a reducirse a 11.
+
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[h]
@@ -166,23 +183,23 @@
 \hline
 \multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 100 simulaciones}} \\ \hline
 \textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
-0 & 100 & 44.23 & 352.931 & 966.935 & 290.197 & 7.8096 & 213.881 \\
-1 & 100 & 50.06 & 327.452 & 897.128 & 405.473 & 156.902 & 429.859 \\
-2 & 100 & 53.96 & 289.779 & 793.916 & 497.249 & 217.551 & 596.041 \\
-3 & 100 & 53.3 & 240.962 & 66.017 & 675.921 & 288.235 & 789.661 \\
-4 & 100 & 48.42 & 188.81 & 517.287 & 793.686 & 29.438 & 806.512 \\
-5 & 100 & 40.32 & 135.199 & 370.408 & 846.846 & 291.112 & 797.563 \\
-6 & 100 & 31.17 & 918.402 & 251.617 & 9.0208 & 265.919 & 728.545 \\
-7 & 100 & 21.39 & 560.191 & 153.477 & 817.349 & 209.672 & 574.444 \\
-8 & 100 & 13.62 & 31.757 & 870.056 & 710.496 & 167.809 & 459.749 \\
-9 & 100 & 07.05 & 153.795 & 421.357 & 529.603 & 12.19 & 333.973 \\
-10 & 100 & 3.64 & 721.123 & 197.568 & 406.393 & 8.3311 & 228.249 \\
-11 & 100 & 2.14 & 424.927 & 116.418 & 345.248 & 685.864 & 187.908 \\
-12 & 100 & 0.85 & 155.213 & 425.242 & 183.883 & 342.524 & 938.423 \\
-13 & 100 & 0.59 & 920.676 & 25.224 & 182.073 & 2.9375 & 804.793 \\
-14 & 100 & 0.28 & 415.516 & 11.384 & 107.384 & 151.682 & 415.566 \\
-15 & 100 & 0.14 & 19.732 & 540.603 & 651.649 & 983.849 & 269.548 \\
-16 & 100 & 0.07 & 103.657 & 283.992 & 408.372 & 618.308 & 169.399 \\
+0 & 100 & 44.23 & 352.931 & 96.6935 & 2.90197 & 7.8096 & 2.13881 \\
+1 & 100 & 50.06 & 327.452 & 89.7128 & 4.05473 & 15.6902 & 4.29859 \\
+2 & 100 & 53.96 & 289.779 & 79.3916 & 4.97249 & 21.7551 & 5.96041 \\
+3 & 100 & 53.3 & 240.962 & 66.017 & 6.75921 & 28.8235 & 7.89661 \\
+4 & 100 & 48.42 & 188.81 & 51.7287 & 7.93686 & 29.438 & 8.06512 \\
+5 & 100 & 40.32 & 135.199 & 37.0408 & 8.46846 & 29.1112 & 7.97563 \\
+6 & 100 & 31.17 & 91.8402 & 25.1617 & 9.0208 & 26.5919 & 7.28545 \\
+7 & 100 & 21.39 & 56.0191 & 15.3477 & 8.17349 & 20.9672 & 5.74444 \\
+8 & 100 & 13.62 & 31.757 & 8.70056 & 7.10496 & 16.7809 & 4.59749 \\
+9 & 100 & 7.05 & 15.3795 & 4.21357 & 5.29603 & 12.19 & 3.33973 \\
+10 & 100 & 3.64 & 7.21123 & 1.97568 & 4.06393 & 8.3311 & 2.28249 \\
+11 & 100 & 2.14 & 4.24927 & 1.16418 & 3.45248 & 6.85864 & 1.87908 \\
+12 & 100 & 0.85 & 1.55213 & 0.425242 & 1.83883 & 3.42524 & 0.938423 \\
+13 & 100 & 0.59 & 0.920676 & 0.25224 & 1.82073 & 2.9375 & 0.804793 \\
+14 & 100 & 0.28 & 0.415516 & 0.11384 & 1.07384 & 1.51682 & 0.415566 \\
+15 & 100 & 0.14 & 0.19732 & 0.0540603 & 0.651649 & 0.983849 & 0.269548 \\
+16 & 100 & 0.07 & 0.103657 & 0.0283992 & 0.408372 & 0.618308 & 0.169399 \\
 17 & 100 & 0 & 0 & 0 & 0 & 0 & 0 \\
 18 & 100 & 0 & 0 & 0 & 0 & 0 & 0 \\
 19 & 100 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -194,8 +211,12 @@
 25 & 100 & 0 & 0 & 0 & 0 & 0 & 0 \\ \hline
 \end{tabular}%
 }
-
 \end{table}
+
+Para 100 simulaciones el numero minimo de repuestos necesarios es 12 nuevamente.
+
+\newpage
+
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[h]
@@ -203,26 +224,26 @@
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
-\multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 500 simulaciones}} \\ \hline
+\multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 1 simulaciones}} \\ \hline
 \textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
-0 & 500 & 43.614 & 353.264 & 967.847 & 338.172 & 8.2248 & 225.325 \\
-1 & 500 & 49.964 & 327.702 & 897.815 & 390.708 & 156.817 & 429.633 \\
-2 & 500 & 52.968 & 286.273 & 784.308 & 537.818 & 227.282 & 622.769 \\
-3 & 500 & 52.948 & 239.339 & 655.724 & 719.394 & 274.515 & 752.098 \\
-4 & 500 & 47.96 & 184.182 & 50.461 & 874.159 & 30.029 & 822.693 \\
-5 & 500 & 41.108 & 138.178 & 37.857 & 983.594 & 315.809 & 865.228 \\
-6 & 500 & 30.594 & 888.157 & 243.331 & 935.437 & 271.053 & 7.4261 \\
-7 & 500 & 21.71 & 570.597 & 156.328 & 891.251 & 234.896 & 643.552 \\
-8 & 500 & 13.862 & 330.256 & 904.811 & 758.168 & 18.336 & 502.354 \\
-9 & 500 & 7.706 & 165.063 & 452.227 & 574.958 & 12.8776 & 3.5281 \\
-10 & 500 & 4.012 & 800.862 & 219.414 & 401.448 & 849.454 & 232.727 \\
-11 & 500 & 2.344 & 430.441 & 117.929 & 309.917 & 626.651 & 171.685 \\
-12 & 500 & 01.01 & 1.6885 & 462.602 & 189.766 & 350.219 & 959.503 \\
-13 & 500 & 476 & 732.022 & 200.554 & 141.613 & 236.788 & 648.735 \\
-14 & 500 & 132 & 176.517 & 483.607 & 644.521 & 880.701 & 241.288 \\
-15 & 500 & 56 & 624.482 & 171.091 & 439.603 & 544.604 & 149.207 \\
-16 & 500 & 26 & 234.817 & 643.334 & 318.633 & 27.563 & 75.515 \\
-17 & 500 & 14 & 706.058 & 19.344 & 184.043 & 963.399 & 263.945 \\
+0 & 500 & 43.614 & 353.264 & 96.7847 & 3.38172 & 8.2248 & 2.25325 \\
+1 & 500 & 49.964 & 327.702 & 89.7815 & 3.90708 & 15.6817 & 4.29633 \\
+2 & 500 & 52.968 & 286.273 & 78.4308 & 5.37818 & 22.7282 & 6.22769 \\
+3 & 500 & 52.948 & 239.339 & 65.5724 & 7.19394 & 27.4515 & 7.52098 \\
+4 & 500 & 47.96 & 184.182 & 50.461 & 8.74159 & 30.029 & 8.22693 \\
+5 & 500 & 41.108 & 138.178 & 37.857 & 9.83594 & 31.5809 & 8.65228 \\
+6 & 500 & 30.594 & 88.8157 & 24.3331 & 9.35437 & 27.1053 & 7.4261 \\
+7 & 500 & 21.71 & 57.0597 & 15.6328 & 8.91251 & 23.4896 & 6.43552 \\
+8 & 500 & 13.862 & 33.0256 & 9.04811 & 7.58168 & 18.336 & 5.02354 \\
+9 & 500 & 7.706 & 16.5063 & 4.52227 & 5.74958 & 12.8776 & 3.5281 \\
+10 & 500 & 4.012 & 8.00862 & 2.19414 & 4.01448 & 8.49454 & 2.32727 \\
+11 & 500 & 2.344 & 4.30441 & 1.17929 & 3.09917 & 6.26651 & 1.71685 \\
+12 & 500 & 1.01 & 1.6885 & 0.462602 & 1.89766 & 3.50219 & 0.959503 \\
+13 & 500 & 0.476 & 0.732022 & 0.200554 & 1.41613 & 2.36788 & 0.648735 \\
+14 & 500 & 0.132 & 0.176517 & 0.0483607 & 0.644521 & 0.880701 & 0.241288 \\
+15 & 500 & 0.056 & 0.0624482 & 0.0171091 & 0.439603 & 0.544604 & 0.149207 \\
+16 & 500 & 0.026 & 0.0234817 & 0.00643334 & 0.318633 & 0.27563 & 0.075515 \\
+17 & 500 & 0.014 & 0.00706058 & 0.0019344 & 0.184043 & 0.0963399 & 0.0263945 \\
 18 & 500 & 0 & 0 & 0 & 0 & 0 & 0 \\
 19 & 500 & 0 & 0 & 0 & 0 & 0 & 0 \\
 20 & 500 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -235,6 +256,8 @@
 }
 \end{table}
 
+Para 500 simulaciones, el numero se establece en 12.
+
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[h]
@@ -242,27 +265,27 @@
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
-\multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 1000 simulaciones}} \\ \hline
+\multicolumn{8}{|c|}{\textbf{Tabla generada para el simulador de radares con 1 simulaciones}} \\ \hline
 \textbf{Num. repuestos} & \textbf{Num. simulaciones} & \textbf{Media fallos} & \textbf{Media t desproteccion} & \textbf{Media \% desproteccion} & \textbf{Desv. num fallos} & \textbf{Desv. t desproteccion} & \textbf{Desv \% desproteccion} \\ \hline
-0 & 1000 & 43.513 & 353.071 & 96.732 & 3.1796 & 859.499 & 235.043 \\
-1 & 1000 & 49.824 & 327.038 & 895.994 & 396.923 & 161.883 & 443.528 \\
-2 & 1000 & 53.512 & 288.475 & 790.343 & 543.427 & 225.752 & 618.537 \\
-3 & 1000 & 53.045 & 238.865 & 654.425 & 700.743 & 277.088 & 759.086 \\
-4 & 1000 & 48.38 & 186.192 & 510.116 & 8.7462 & 306.683 & 840.182 \\
-5 & 1000 & 40.452 & 135.737 & 371.883 & 958.142 & 307.735 & 843.114 \\
-6 & 1000 & 31.071 & 916.605 & 251.124 & 966.775 & 279.243 & 7.6505 \\
-7 & 1000 & 21.122 & 558.657 & 153.057 & 861.658 & 233.216 & 6.3895 \\
-8 & 1000 & 13.697 & 323.572 & 886.498 & 725.437 & 177.917 & 487.444 \\
-9 & 1000 & 8.095 & 175.134 & 479.818 & 580.031 & 130.986 & 358.867 \\
-10 & 1000 & 4.477 & 883.343 & 242.012 & 4.2804 & 890.266 & 243.908 \\
-11 & 1000 & 2.271 & 417.391 & 114.354 & 292.919 & 575.138 & 157.572 \\
-12 & 1000 & 01.03 & 169.007 & 463.034 & 223.295 & 3.9231 & 107.482 \\
-13 & 1000 & 0.37 & 581.137 & 159.215 & 116.123 & 197.489 & 541.066 \\
-14 & 1000 & 125 & 194.782 & 533.649 & 594.751 & 105.566 & 289.222 \\
-15 & 1000 & 61 & 826.214 & 22.636 & 370.697 & 585.637 & 160.449 \\
-16 & 1000 & 23 & 301.155 & 825.083 & 22.918 & 36.915 & 101.137 \\
-17 & 1000 & 8 & 18.493 & 506.657 & 126.301 & 363.317 & 995.388 \\
-18 & 1000 & 1 & 167.416 & 458.674 & 316.228 & 529.416 & 145.045 \\
+0 & 1000 & 43.513 & 353.071 & 96.732 & 3.1796 & 8.59499 & 2.35043 \\
+1 & 1000 & 49.824 & 327.038 & 89.5994 & 3.96923 & 16.1883 & 4.43528 \\
+2 & 1000 & 53.512 & 288.475 & 79.0343 & 5.43427 & 22.5752 & 6.18537 \\
+3 & 1000 & 53.045 & 238.865 & 65.4425 & 7.00743 & 27.7088 & 7.59086 \\
+4 & 1000 & 48.38 & 186.192 & 51.0116 & 8.7462 & 30.6683 & 8.40182 \\
+5 & 1000 & 40.452 & 135.737 & 37.1883 & 9.58142 & 30.7735 & 8.43114 \\
+6 & 1000 & 31.071 & 91.6605 & 25.1124 & 9.66775 & 27.9243 & 7.6505 \\
+7 & 1000 & 21.122 & 55.8657 & 15.3057 & 8.61658 & 23.3216 & 6.3895 \\
+8 & 1000 & 13.697 & 32.3572 & 8.86498 & 7.25437 & 17.7917 & 4.87444 \\
+9 & 1000 & 8.095 & 17.5134 & 4.79818 & 5.80031 & 13.0986 & 3.58867 \\
+10 & 1000 & 4.477 & 8.83343 & 2.42012 & 4.2804 & 8.90266 & 2.43908 \\
+11 & 1000 & 2.271 & 4.17391 & 1.14354 & 2.92919 & 5.75138 & 1.57572 \\
+12 & 1000 & 1.03 & 1.69007 & 0.463034 & 2.23295 & 3.9231 & 1.07482 \\
+13 & 1000 & 0.37 & 0.581137 & 0.159215 & 1.16123 & 1.97489 & 0.541066 \\
+14 & 1000 & 0.125 & 0.194782 & 0.0533649 & 0.594751 & 1.05566 & 0.289222 \\
+15 & 1000 & 0.061 & 0.0826214 & 0.022636 & 0.370697 & 0.585637 & 0.160449 \\
+16 & 1000 & 0.023 & 0.0301155 & 0.00825083 & 0.22918 & 0.36915 & 0.101137 \\
+17 & 1000 & 0.008 & 0.018493 & 0.00506657 & 0.126301 & 0.363317 & 0.0995388 \\
+18 & 1000 & 0.001 & 0.00167416 & 0.000458674 & 0.0316228 & 0.0529416 & 0.0145045 \\
 19 & 1000 & 0 & 0 & 0 & 0 & 0 & 0 \\
 20 & 1000 & 0 & 0 & 0 & 0 & 0 & 0 \\
 21 & 1000 & 0 & 0 & 0 & 0 & 0 & 0 \\
@@ -274,6 +297,14 @@
 }
 \end{table}
 
+Para 1000 simulaciones es finalmente 12.
+
+Por tanto, podemos afirmar rotundamente que para repuestos con un tiempo de reparación de entre 15 y 30 días y una vida util de 20 días, el numero minimo de repuestos necesarios para que el tiempo de desprotección parcial sea inferior al 1\% es de 12 repuestos.
+
+Finalmente se añaden dos graficas en las que se puede notar, como al aumentar el numero de simulaciones, las curvas tanto para el tiempo de desprotección como para el porcentaje de tiempo, estas se suavizan.
+
+\newpage
+
 
 \begin{figure}[h]
 \includegraphics[width=16cm]{radares_prob_fallo.png}
@@ -281,8 +312,10 @@
 \centering
 \end{figure}
 
+\newpage
 
 \section{Variacion de las  propiedades de los respuesto}
+A continuación, se ha realizado el mismo estudio, pero variando las propiedades de estos repuestos. De ahora en adelante 'tr' se referira a tiempo de reparación, es decir, el tiempo que tarda un repuesto en ser reparado y 'vu' se referira a la vida util del repuesto, el tiempo que tarda el mismo en fallar.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
